--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Hi, I'm <span>Madhi Anandhan</span></h1>
     <img src="Madhi_blazer.jpg" alt="Madhi's photo" class="profile-img">
 
-    <p>A computer science student and aspiring UI designer</p>
+    <p>Computer science student and aspiring UI designer</p>
     <a href="#projects" class="btn">View Projects</a>
   </header>
 
