--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header / Hero -->
   <header class="hero">
     <h1>Hi, I'm <span>Madhi Anandhan</span></h1>
-    <img src="Madhi_blazer.jpg" alt="Madhi's photo" class="profile-img">
+    <img src="Madhi.jpg" alt="Madhi's photo" class="profile-img">
 
     <p>Computer science student and aspiring UI designer</p>
     <a href="#projects" class="btn">View Projects</a>
