--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="contact" class="section contact">
     <h2>Contact</h2>
     <p>If you'd like to connect or collaborate, email me:</p>
-    <a href="mailto:madhianandhan@gmail.com">madhianandhan@gmail.com</a>
+    <a href="mailto:madhianandhan@gmail.com" target="_blank">madhianandhan@gmail.com</a>
   </section>
 
   <footer>
